--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,14 +1,4 @@
-html, body, #app, #app div {
-  height: 100%
-}
-
-.background-black {
-    background-color: #000;
-}
-
-.image-center {
-    width: 100%;
-    max-height: 100%;
-    object-fit: none; /* Do not scale the image */
-    object-position: center; /* Center the image within the element */
+body {
+  display: block;
+  margin: 0 auto;
 }
