--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -4,9 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>title</title>
-        <link rel="stylesheet" href="/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="/css/home.css"/>
-
+        <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     </head>
     <body>
       <div id="app" api_endpoint="<%= apiEndpoint %>"> </div>
